# rolling_hash_with_tests

./: CMakeLists.txt  Notes.MD
DateConverter_lib/: RollingHash.h
Google_tests/: CMakeLists.txt  Input.txt  ModifiedInput.txt  RollingChecksumTest.cpp  RollingHashTest.cpp  RsyncFileDiffTest.cpp  Sha1Test.cpp
RollingHash_lib/: CMakeLists.txt  CustomTypeDefinitions.h  RollingChecksum.cpp  RollingChecksum.h  RollingHash.cpp  RollingHash.h  RsyncFileDiff.cpp  RsyncFileDiff.h  Sha1.hpp  sha1.hpp
